# sigsegv-roguelike

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
resource_packer/: main.js  package-lock.json  package.json
resource_packer/src/: buffer.js  json-object.js  logger.js  packer.js  textures.js
resource_packer/test/: json-object.test.js  packer.test.js  textures.test.js
resource_packer/test/data/: object.json
resources/test/: sample.json
scripts/: run_game.sh  run_tests.sh
spikes/: spike-float-parsing.c
src/: main.c
src/engine/: drawing.h  file.h  hashmap.c  hashmap.h  input.h  list.c  list.h  log.c  log.h  platform.h  resource_file.c  resource_file.h  resource_pack.c  resource_pack.h  texture_repository.c  texture_repository.h  vector.h  window.h
src/engine/null/: drawing.c  file.c  input.c  platform.c  window.c
src/engine/pc/: drawing.c  file.c  input.c  platform.c  shader.c  shader.h  window.c
src/game/: game.c  game.h
test/: fake_data.hpp  helpers.hpp  resource_file_helpers.hpp  test_hashmap.cpp  test_list.cpp  test_resource_file.cpp  test_resource_pack.cpp  test_texture_repository.cpp
test/fake_data/: default.pack  sample.pack
